[tool.poetry]
name = "IAGQ"
version = "0.1.0"
description = "Masterthesis: Implementation and analysis of gradientcomputation in quantumalgorithms"
authors = ["Moritz Schmidt <st165607@stud.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
qiskit-nature = "^0.3.2"
qiskit = "^0.36.2"
mlflow = "^1.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
